Fixed overflowing issue Display wordwrap was causing display issues, added exponentiation to correct this issue. this causes inaccuracies though...

--- a/style.css
+++ b/style.css
@@ -90,20 +90,20 @@ button {
   margin-bottom: 20px;
   background-color: var(--screen);
   text-align: right;
-  word-wrap: break-word;
-  word-break: break-all;
   box-shadow: inset 0 0 10px rgb(37, 37, 37);
 }
 
 .screen-last {
   min-height: 32px;
   font-size: 20px;
-  font-family: 'Orbitron';
 }
 
 .screen-current {
   min-height: 64px;
   font-size: 40px;
+}
+.screen-last,
+.screen-current {
   font-family: 'Orbitron';
 }
 
